GiRaFFE_NRPy/Unit_Tests: Brought more notebooks up to current standards.

--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "**Notebook Status:** <font color='green'><b>Validated</b></font>\n",
     "\n",
-    "**Validation Notes:** This module will validate the routines in [Tutorial-GiRaFFE_NRPy-A2B](Tutorial-GiRaFFE_NRPy-A2B.ipynb).\n",
+    "**Validation Notes:** This module will validate the routines in [Tutorial-GiRaFFE_NRPy-C2P_P2C](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb).\n",
     "\n",
     "### NRPy+ Source Code for this module: \n",
     "* [GiRaFFE_NRPy/GiRaFFE_NRPy_C2P_P2C.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_C2P_P2C.py) [\\[**tutorial**\\]](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb) Generates the conservative-to-primitive and primitive-to-conservative solvers.\n",
@@ -601,10 +601,6 @@
     "    mhd_st_z[0] = evol_gfs[IDX4S(STILDED2GF, i0,i1,i2)];\n",
     "\n",
     "    printf(\"Valencia 3-velocity: %.4e, %.4e, %.4e\\n\",auxevol_gfs[IDX4S(VALENCIAVU0GF, i0,i1,i2)],auxevol_gfs[IDX4S(VALENCIAVU1GF, i0,i1,i2)],auxevol_gfs[IDX4S(VALENCIAVU2GF, i0,i1,i2)]);\n",
-    "    printf(\"Below are the numbers we care about. These are the Significant Digits of Agreement between the \\n\");\n",
-    "    printf(\"corrected StildeD and ValenciavU as computed by NRPy+ and ETK. Each row represents a flux \\n\");\n",
-    "    printf(\"direction; each entry therein corresponds to a component of StildeD. Each pair \\n\");\n",
-    "    printf(\"of outputs should show at least 10 significant digits of agreement. \\n\\n\");\n",
     "\n",
     "    GiRaFFE_conserv_to_prims_FFE();\n",
     "    GiRaFFE_NRPy_cons_to_prims(&params,xx,auxevol_gfs,evol_gfs);\n",
@@ -650,24 +646,16 @@
      "text": [
       "Now compiling, should take ~2 seconds...\n",
       "\n",
-      "Finished in 0.7042636871337891 seconds.\n",
+      "Finished in 1.9541115760803223 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "Valencia 3-velocity: -4.5206e-02, 2.5774e-01, -2.7043e-01\n",
-      "Below are the numbers we care about. These are the Significant Digits of Agreement between the \n",
-      "corrected StildeD and ValenciavU as computed by NRPy+ and ETK. Each row represents a flux \n",
-      "direction; each entry therein corresponds to a component of StildeD. Each pair \n",
-      "of outputs should show at least 10 significant digits of agreement. \n",
-      "\n",
-      "Checking the Poynting Fluxes:\n",
-      "SDA: 16.5, 15.8, 16.0\n",
-      "\n",
-      "\n",
-      "Checking the Valencia Velocities:\n",
-      "SDA: 16.2, 16.7, 16.6\n",
-      "Finished in 0.1400918960571289 seconds.\n",
+      "(EXEC): Executing `cmd /c Validation/Stilde_flux_unit_test `...\n",
+      "'Validation' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n",
+      "(BENCH): Finished executing in 0.2370133399963379 seconds.\n",
+      "Finished in 0.3670210838317871 seconds.\n",
       "\n",
       "\n"
      ]
@@ -675,22 +663,57 @@
    ],
    "source": [
     "import time\n",
+    "results_file = \"out.txt\"\n",
     "\n",
     "print(\"Now compiling, should take ~2 seconds...\\n\")\n",
     "start = time.time()\n",
+    "# Can't use C here; must use C++\n",
     "# cmd.C_compile(os.path.join(out_dir,\"C2P_P2C_unit_test.C\"), os.path.join(out_dir,\"C2P_P2C_unit_test\"))\n",
     "!g++ -Ofast -fopenmp -march=native -funroll-loops Validation/C2P_P2C_unit_test.C -o Validation/C2P_P2C_unit_test -lm\n",
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "\n",
-    "# os.chdir(out_dir)\n",
     "print(\"Now running...\\n\")\n",
     "start = time.time()\n",
-    "# cmd.Execute(os.path.join(\"Stilde_flux_unit_test\"))\n",
-    "!./Validation/C2P_P2C_unit_test\n",
+    "cmd.Execute(os.path.join(out_dir,\"Stilde_flux_unit_test\"),file_to_redirect_stdout=os.path.join(out_dir,results_file))\n",
     "end = time.time()\n",
-    "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
-    "# os.chdir(os.path.join(\"../\"))\n"
+    "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below are the numbers we care about. These are the Significant Digits of Agreement between the corrected StildeD and ValenciavU as computed by NRPy+ and ETK. Each row represents a flux direction; each entry therein corresponds to a component of StildeD. Each pair of outputs should show at least 10 significant digits of agreement. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(os.path.join(out_dir,results_file),\"r\") as file:\n",
+    "    for i in range(6):\n",
+    "        output = file.readline()\n",
+    "        print(output)\n",
+    "        if \"SDA\" in output:\n",
+    "            substrings = output.split()\n",
+    "            print(substrings)\n",
+    "            sys.exit(1)"
    ]
   },
   {
@@ -814,28 +837,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C\")"
+    "# cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C\",location_of_template_file=os.path.join(\"..\"))"
    ]
   }
  ],
