--- a/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
+++ b/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
@@ -63,13 +63,13 @@
     "                    1. <font color='green'><b> Patrick Seal of Approval</b></font> [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-A2B.ipynb):\n",
     "                    1. <font color='green'><b> Patrick Seal of Approval</b></font> [Staggered prescription](Tutorial-GiRaFFE_NRPy_staggered-A2B.ipynb)\n",
     "                1. *Validation*:\n",
-    "                    1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb)\n",
+    "                    1. <font color='green'><b> Patrick Seal of Approval </b></font>[**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb)\n",
     "            1. <font color='green'><b>Patrick Seal of Approval</b></font>[Recalculate $\\bar{v}^i$ and apply fixes to $\\tilde{S}_i$ and $\\bar{v}^i$:](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
     "                1. Apply fixes to $\\tilde{S}_i$, then recompute $\\bar{v}^i$ at the next time step. Then, apply fixes to $\\bar{v}^i$ to preserve current sheets, and recompute $\\tilde{S}_i$ to match.\n",
-    "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
+    "                1. <font color='green'><b> Patrick Seal of Approval </b></font>[**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
     "            1. <font color='green'><b>Patrick Seal of Approval</b></font>[Apply boundary conditions:](Tutorial-GiRaFFE_NRPy-BCs.ipynb)\n",
     "                1. Apply linear (To be upgraded?) outer boundary conditions to the vector potential and Valencia three-velocity. \n",
-    "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs.ipynb)\n",
+    "                1. <font color='green'><b> Patrick Seal of Approval </b></font>[**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs.ipynb)\n",
     "1. <font color='navy'><b>**Start-to-Finish Modules:**</b></font>\n",
     "    1. [Unstaggered](Tutorial-Start_to_Finish-GiRaFFE_NRPy-1D_tests-unstaggered.ipynb)\n",
     "    1. [Staggered](Tutorial-Start_to_Finish-GiRaFFE_NRPy-1D_tests-staggered.ipynb)\n",
