--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "This notebook validates our A-to-B solver for use in `GiRaFFE_NRPy`. Because the original `GiRaFFE` used staggered grids and we do not, we can not trivially do a direct comparison to the old code. Instead, we will compare the numerical results with the expected analytic results. \n",
     "\n",
-    "It is, in general, good coding practice to unit test functions individually to verify that they produce the expected and intended output. Here, we expect our functions to produce the correct cross product in an arbitrary spacetime. To that end, we will choose functions that are easy to differentiate, but lack the symmetries that would trivialize the finite-difference algorithm. Higher-order polynomials are one such type of function. \n",
+    "It is, in general, good coding practice to unit test functions individually to verify that they produce the expected and intended output. Here, we expect our functions to produce the correct curl operator in an arbitrary spacetime. To that end, we will choose functions that are easy to differentiate, but lack the symmetries that would trivialize the finite-difference algorithm. Higher-order polynomials are one such type of function. \n",
     "\n",
     "When this notebook is run, if `Use_Gaussian_Data` is `True`, the difference between the approximate and exact magnetic field will be output to text files that can be found in the same directory as this notebook. These will be read in in [Step 3](#convergence), and used there to confirm second order convergence of the algorithm. Otherwise, is `Use_Gaussian_Data` is `False`, polynomial data will be used and the significant digits of agreement between the approximate and exact magnetic field will be printed to the screen right after the code is run [here](#compile_run).\n"
    ]
@@ -424,7 +424,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing Validation//A2B_unit_test.c\n"
+      "Overwriting Validation//A2B_unit_test.c\n"
      ]
     }
    ],
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -732,7 +732,21 @@
       "Now compiling, should take ~2 seconds...\n",
       "\n",
       "Compiling executable...\n",
-      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/A2B_unit_test.c -o Validation/A2B_unit_test.exe -lm`...\n"
+      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/A2B_unit_test.c -o Validation/A2B_unit_test.exe -lm`...\n",
+      "(BENCH): Finished executing in 1.6280932426452637 seconds.\n",
+      "Finished compilation.\n",
+      "Finished in 1.8241040706634521 seconds.\n",
+      "\n",
+      "\n",
+      "Now running...\n",
+      "\n",
+      "(EXEC): Executing `cmd /c Validation\\A2B_unit_test 1 1 1 1`...\n",
+      "(BENCH): Finished executing in 0.24301385879516602 seconds.\n",
+      "(EXEC): Executing `cmd /c Validation\\A2B_unit_test 7 7 7 1`...\n",
+      "(BENCH): Finished executing in 0.24701428413391113 seconds.\n",
+      "Finished in 0.716041088104248 seconds.\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -747,12 +761,10 @@
     "\n",
     "print(\"Now running...\\n\")\n",
     "start = time.time()\n",
-    "!./Validation/A2B_unit_test 1 1 1 1\n",
+    "cmd.Execute(os.path.join(\"Validation\",\"A2B_unit_test\"),\"1 1 1 1\")\n",
     "if Use_Gaussian_Data:\n",
     "    # To do a convergence test, we'll also need a second grid with twice the resolution.\n",
-    "    !./Validation/A2B_unit_test 7 7 7 1\n",
-    "\n",
-    "# !./Validation/A2B_unit_test 19 19 19 1\n",
+    "    cmd.Execute(os.path.join(\"Validation\",\"A2B_unit_test\"),\"7 7 7 1\")\n",
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n"
    ]
@@ -781,9 +793,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Face | Res  |  L2 norm  | Conv. Order\n",
+      " Int | Dx   | 0.0000003 | -- \n",
+      " --  | Dx/2 | 0.0000001 | 1.84998\n",
+      " -x  | Dx   | 0.0000006 | -- \n",
+      " --  | Dx/2 | 0.0000002 | 2.09450\n",
+      " +x  | Dx   | 0.0000006 | -- \n",
+      " --  | Dx/2 | 0.0000002 | 2.09450\n",
+      " -y  | Dx   | 0.0000010 | -- \n",
+      " --  | Dx/2 | 0.0000003 | 1.84995\n",
+      " +y  | Dx   | 0.0000010 | -- \n",
+      " --  | Dx/2 | 0.0000003 | 1.76225\n",
+      " -z  | Dx   | 0.0000006 | -- \n",
+      " --  | Dx/2 | 0.0000002 | 1.97686\n",
+      " +z  | Dx   | 0.0000009 | -- \n",
+      " --  | Dx/2 | 0.0000002 | 1.93391\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -877,21 +911,27 @@
     "L2_2_zm = np.sqrt(L2_2_zm/(nface))\n",
     "L2_2_zp = np.sqrt(L2_2_zp/(nface))\n",
     "\n",
+    "def conv_order(low,high):\n",
+    "    order = np.log2(low/high)\n",
+    "    if order < 1.7:\n",
+    "        sys.exit(1)\n",
+    "    return order\n",
+    "\n",
     "print(\"Face | Res  |  L2 norm  | Conv. Order\")\n",
     "print(\" Int | Dx   | \" + \"{:.7f}\".format(L2_1) + \" | -- \")\n",
-    "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2) + \" | \" + \"{:.5f}\".format(np.log2(L2_1/L2_2)))\n",
+    "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2) + \" | \" + \"{:.5f}\".format(conv_order(L2_1,L2_2)))\n",
     "print(\" -x  | Dx   | \" + \"{:.7f}\".format(L2_1_xm) + \" | -- \")\n",
-    "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2_xm) + \" | \" + \"{:.5f}\".format(np.log2(L2_1_xm/L2_2_xm)))\n",
+    "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2_xm) + \" | \" + \"{:.5f}\".format(conv_order(L2_1_xm,L2_2_xm)))\n",
     "print(\" +x  | Dx   | \" + \"{:.7f}\".format(L2_1_xp) + \" | -- \")\n",
-    "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2_xp) + \" | \" + \"{:.5f}\".format(np.log2(L2_1_xp/L2_2_xp)))\n",
+    "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2_xp) + \" | \" + \"{:.5f}\".format(conv_order(L2_1_xp,L2_2_xp)))\n",
     "print(\" -y  | Dx   | \" + \"{:.7f}\".format(L2_1_ym) + \" | -- \")\n",
-    "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2_ym) + \" | \" + \"{:.5f}\".format(np.log2(L2_1_ym/L2_2_ym)))\n",
+    "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2_ym) + \" | \" + \"{:.5f}\".format(conv_order(L2_1_ym,L2_2_ym)))\n",
     "print(\" +y  | Dx   | \" + \"{:.7f}\".format(L2_1_yp) + \" | -- \")\n",
-    "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2_yp) + \" | \" + \"{:.5f}\".format(np.log2(L2_1_yp/L2_2_yp)))\n",
+    "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2_yp) + \" | \" + \"{:.5f}\".format(conv_order(L2_1_yp,L2_2_yp)))\n",
     "print(\" -z  | Dx   | \" + \"{:.7f}\".format(L2_1_zm) + \" | -- \")\n",
-    "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2_zm) + \" | \" + \"{:.5f}\".format(np.log2(L2_1_zm/L2_2_zm)))\n",
+    "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2_zm) + \" | \" + \"{:.5f}\".format(conv_order(L2_1_zm,L2_2_zm)))\n",
     "print(\" +z  | Dx   | \" + \"{:.7f}\".format(L2_1_zp) + \" | -- \")\n",
-    "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2_zp) + \" | \" + \"{:.5f}\".format(np.log2(L2_1_zp/L2_2_zp)))\n"
+    "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2_zp) + \" | \" + \"{:.5f}\".format(conv_order(L2_1_zp,L2_2_zp)))\n"
    ]
   },
   {
@@ -910,12 +950,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B\")"
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B\",location_of_template_file=os.path.join(\"..\"))"
    ]
   }
  ],
