--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
@@ -331,29 +331,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we will write the function to compute the electric field contribution to the induction equation RHS. This is coded with documentation in [Tutorial-GiRaFFE_NRPy-Afield_flux](Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb). The recontructed values in the $i^{\\rm th}$ direction will contribute to the $j^{\\rm th}$ and $k^{\\rm th}$ component of the electric field. That is, in Cartesian coordinates, the component $x$ of the electric field will be the average of the values computed on the cell faces in the $\\pm y$- and $\\pm z$-directions, and so forth for the other components. However, all of these can be written as only a single function as long as we appropriately pass cyclical permutations of the inputs."
+    "Here, we will write the function to compute the electric field contribution to the induction equation RHS. This is coded with documentation in [Tutorial-GiRaFFE_NRPy-Afield_flux_handwritten](Tutorial-GiRaFFE_NRPy-Afield_flux_handwritten.ipynb). The recontructed values in the $i^{\\rm th}$ direction will contribute to the $j^{\\rm th}$ and $k^{\\rm th}$ component of the electric field. That is, in Cartesian coordinates, the component $x$ of the electric field will be the average of the values computed on the cell faces in the $\\pm y$- and $\\pm z$-directions, and so forth for the other components. However, all of these can be written as only a single function as long as we appropriately pass cyclical permutations of the inputs."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Output C function calculate_E_field_D0_right() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_E_field_D0_right.h\n",
-      "Output C function calculate_E_field_D0_left() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_E_field_D0_left.h\n",
-      "Output C function calculate_E_field_D1_right() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_E_field_D1_right.h\n",
-      "Output C function calculate_E_field_D1_left() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_E_field_D1_left.h\n",
-      "Output C function calculate_E_field_D2_right() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_E_field_D2_right.h\n",
-      "Output C function calculate_E_field_D2_left() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_E_field_D2_left.h\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import GiRaFFE_NRPy.Afield_flux as Af\n",
+    "import GiRaFFE_NRPy.GiRaFFE_NRPy_Afield_flux_handwritten as Af\n",
     "\n",
     "# We will pass values of the gridfunction on the cell faces into the function. This requires us\n",
     "# to declare them as C parameters in NRPy+. We will denote this with the _face infix/suffix.\n",
@@ -369,8 +356,7 @@
     "B_lU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"B_lU\",DIM=3)\n",
     "\n",
     "subdir = \"RHSs\"\n",
-    "Af.generate_Afield_flux_function_files(out_dir,subdir,alpha_face,gamma_faceDD,beta_faceU,\\\n",
-    "                                       Valenciav_rU,B_rU,Valenciav_lU,B_lU,True)"
+    "Af.GiRaFFE_NRPy_Afield_flux(os.path.join(out_dir,subdir))"
    ]
   },
   {
@@ -801,12 +787,6 @@
       "Output C function calculate_StildeD0_source_term() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_StildeD0_source_term.h\n",
       "Output C function calculate_StildeD1_source_term() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_StildeD1_source_term.h\n",
       "Output C function calculate_StildeD2_source_term() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_StildeD2_source_term.h\n",
-      "Output C function calculate_E_field_D0_right() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_E_field_D0_right.h\n",
-      "Output C function calculate_E_field_D0_left() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_E_field_D0_left.h\n",
-      "Output C function calculate_E_field_D1_right() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_E_field_D1_right.h\n",
-      "Output C function calculate_E_field_D1_left() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_E_field_D1_left.h\n",
-      "Output C function calculate_E_field_D2_right() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_E_field_D2_right.h\n",
-      "Output C function calculate_E_field_D2_left() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_E_field_D2_left.h\n",
       "Output C function GiRaFFE_NRPy_cons_to_prims() to file GiRaFFE_validation_Ccodes\\C2P\\GiRaFFE_NRPy_cons_to_prims.h\n",
       "Output C function GiRaFFE_NRPy_prims_to_cons() to file GiRaFFE_validation_Ccodes\\C2P\\GiRaFFE_NRPy_prims_to_cons.h\n"
      ]
@@ -860,17 +840,7 @@
       "No difference. TEST PASSED!\n",
       "Checking file RHSs/calculate_StildeD2_source_term.h\n",
       "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_E_field_D0_right.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_E_field_D0_left.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_E_field_D1_right.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_E_field_D1_left.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_E_field_D2_right.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_E_field_D2_left.h\n",
+      "Checking file RHSs/calculate_E_field_flat_all_in_one.h\n",
       "No difference. TEST PASSED!\n",
       "Checking file RHSs/calculate_Stilde_flux_D0.h\n",
       "No difference. TEST PASSED!\n",
@@ -904,12 +874,7 @@
     "         \"RHSs/calculate_StildeD0_source_term.h\",\n",
     "         \"RHSs/calculate_StildeD1_source_term.h\",\n",
     "         \"RHSs/calculate_StildeD2_source_term.h\",\n",
-    "         \"RHSs/calculate_E_field_D0_right.h\",\n",
-    "         \"RHSs/calculate_E_field_D0_left.h\",\n",
-    "         \"RHSs/calculate_E_field_D1_right.h\",\n",
-    "         \"RHSs/calculate_E_field_D1_left.h\",\n",
-    "         \"RHSs/calculate_E_field_D2_right.h\",\n",
-    "         \"RHSs/calculate_E_field_D2_left.h\",\n",
+    "         \"RHSs/calculate_E_field_flat_all_in_one.h\",\n",
     "         \"RHSs/calculate_Stilde_flux_D0.h\",\n",
     "         \"RHSs/calculate_Stilde_flux_D1.h\",\n",
     "         \"RHSs/calculate_Stilde_flux_D2.h\",\n",
@@ -952,23 +917,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 2] The system cannot find the file specified",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-16-0d9247a9c892>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcmdline_helper\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mcmd\u001b[0m    \u001b[1;31m# NRPy+: Multi-platform Python command-line interface\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mcmd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moutput_Jupyter_notebook_to_LaTeXed_PDF\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Tutorial-GiRaFFE_NRPy_Main_Driver\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlocation_of_template_file\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"..\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Documents\\nrpytutorial\\cmdline_helper.py\u001b[0m in \u001b[0;36moutput_Jupyter_notebook_to_LaTeXed_PDF\u001b[1;34m(notebookname, location_of_template_file, verbose)\u001b[0m\n\u001b[0;32m    194\u001b[0m                          +r\" --log-level='WARN' \"+notebookname+\".ipynb\",verbose=False)\n\u001b[0;32m    195\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0m_i\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m  \u001b[1;31m# _i is an unused variable.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 196\u001b[1;33m         \u001b[0mExecute_input_string\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr\"pdflatex -interaction=batchmode \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mnotebookname\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\".tex\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    197\u001b[0m     \u001b[0mdelete_existing_files\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnotebookname\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\".out \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mnotebookname\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\".aux \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mnotebookname\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\".log\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    198\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Documents\\nrpytutorial\\cmdline_helper.py\u001b[0m in \u001b[0;36mExecute_input_string\u001b[1;34m(input_string, file_to_redirect_stdout, verbose)\u001b[0m\n\u001b[0;32m    161\u001b[0m     \u001b[0mfilename\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"tmp.txt\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    162\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mwriter\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbuffering\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mreader\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile_to_redirect_stdout\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'wb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mrdirect\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 163\u001b[1;33m         \u001b[0mprocess\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msubprocess\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstdout\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mrdirect\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstderr\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mwriter\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    164\u001b[0m         \u001b[1;32mwhile\u001b[0m \u001b[0mprocess\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpoll\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    165\u001b[0m             \u001b[1;31m# https://stackoverflow.com/questions/21689365/python-3-typeerror-must-be-str-not-bytes-with-sys-stdout-write/21689447\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\patrick\\appdata\\local\\programs\\python\\python38-32\\lib\\subprocess.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, args, bufsize, executable, stdin, stdout, stderr, preexec_fn, close_fds, shell, cwd, env, universal_newlines, startupinfo, creationflags, restore_signals, start_new_session, pass_fds, encoding, errors, text)\u001b[0m\n\u001b[0;32m    852\u001b[0m                             encoding=encoding, errors=errors)\n\u001b[0;32m    853\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 854\u001b[1;33m             self._execute_child(args, executable, preexec_fn, close_fds,\n\u001b[0m\u001b[0;32m    855\u001b[0m                                 \u001b[0mpass_fds\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcwd\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    856\u001b[0m                                 \u001b[0mstartupinfo\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreationflags\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshell\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\patrick\\appdata\\local\\programs\\python\\python38-32\\lib\\subprocess.py\u001b[0m in \u001b[0;36m_execute_child\u001b[1;34m(self, args, executable, preexec_fn, close_fds, pass_fds, cwd, env, startupinfo, creationflags, shell, p2cread, p2cwrite, c2pread, c2pwrite, errread, errwrite, unused_restore_signals, unused_start_new_session)\u001b[0m\n\u001b[0;32m   1305\u001b[0m             \u001b[1;31m# Start the process\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1306\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1307\u001b[1;33m                 hp, ht, pid, tid = _winapi.CreateProcess(executable, args,\n\u001b[0m\u001b[0;32m   1308\u001b[0m                                          \u001b[1;31m# no special security\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1309\u001b[0m                                          \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] The system cannot find the file specified"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy_Main_Driver\",location_of_template_file=os.path.join(\"..\"))"
