--- a/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
+++ b/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
@@ -46,16 +46,16 @@
     "            1. <font color='green'><b> Patrick Seal of Approval</b></font> [Reconstruct primitives on cell faces:](Tutorial-GiRaFFE_NRPy-PPM.ipynb)\n",
     "                1. This uses the piecewise-parabolic method (PPM) to reconstruct gridfunctions on cell faces and apply slope-limiting algorithms mitigate the Gibbs phenomenon and preserve shocks.\n",
     "                1. <font color='green'><b> Patrick Seal of Approval </b></font>[**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb)\n",
-    "            1. <font color='green'><b>Patrick Seal of Approval</b></font> [Calculate the flux term for $\\tilde{S}_i$:](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb) (**JULY 2-8**)\n",
+    "            1. <font color='green'><b>Patrick Seal of Approval</b></font> [Calculate the flux term for $\\tilde{S}_i$:](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb)\n",
     "                1. Use the reconstructed velocities and magnetic fields on the left and right sides of the cell faces to solve the Riemann problem and compute the flux of $\\tilde{S}_i$ on the interface.\n",
-    "                1. [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb)\n",
+    "                1. <font color='orange'><b> Test not passing due to recent changes to NRPy+ implementation </b></font>[**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb)\n",
     "            1. <font color='green'><b> Patrick Seal of Approval</b></font> Calculate the flux term for $A_i$:\n",
     "                1. Here, we apply a similar algorithm as in the previous step to compute the electric field $E_i = \\epsilon_{ijk} v^i B^i$.\n",
     "                1. *Implementation*:\n",
     "                    1. <font color='green'><b> Patrick Seal of Approval</b></font> [Unstaggered prescription](Tutorial-GiRaFFE_NRPy-Afield_flux_handwritten.ipynb)\n",
     "                    1. <font color='green'><b> Patrick Seal of Approval</b></font> [Staggered prescription](Tutorial-GiRaFFE_NRPy_staggered-Afield_flux.ipynb) (validated against original GiRaFFE)\n",
     "                1. *Validation*:\n",
-    "                    1. <font color='orange'><b>Make sure this uses the above written C codes.</b> *unstaggered* [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux.ipynb)\n",
+    "                    1. <font color='orange'><b>Make sure this uses the above written C codes. Currently not passing.</b> *unstaggered* [**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux.ipynb)\n",
     "        1. Post-step: Update primitive variables from the evolved conservative variables and apply boundary conditions\n",
     "            1. Calculate the magnetic field:\n",
     "                1. Compute $B^i = \\epsilon^{ijk} \\partial_j A_k$ using standard finite-differencing methods. Care must be taken in the ghost zones to shift the template appropriately to avoid accessing points that are not stored in memory.\n",
@@ -66,7 +66,7 @@
     "                    1. <font color='green'><b> Patrick Seal of Approval </b></font>[**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb)\n",
     "            1. <font color='green'><b>Patrick Seal of Approval</b></font>[Recalculate $\\bar{v}^i$ and apply fixes to $\\tilde{S}_i$ and $\\bar{v}^i$:](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
     "                1. Apply fixes to $\\tilde{S}_i$, then recompute $\\bar{v}^i$ at the next time step. Then, apply fixes to $\\bar{v}^i$ to preserve current sheets, and recompute $\\tilde{S}_i$ to match.\n",
-    "                1. <font color='green'><b> Patrick Seal of Approval </b></font>[**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
+    "                1. <font color='orange'><b> C++ isn't running right on Windows. </b></font>[**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
     "            1. <font color='green'><b>Patrick Seal of Approval</b></font>[Apply boundary conditions:](Tutorial-GiRaFFE_NRPy-BCs.ipynb)\n",
     "                1. Apply linear (To be upgraded?) outer boundary conditions to the vector potential and Valencia three-velocity. \n",
     "                1. <font color='green'><b> Patrick Seal of Approval </b></font>[**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs.ipynb)\n",
