--- a/in_progress/Tutorial-GiRaFFE_NRPy_staggered-A2B.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_staggered-A2B.ipynb
@@ -24,9 +24,11 @@
     "### NRPy+ Source Code for this module:\n",
     "* [GiRaFFE_NRPy/GiRaFFE_NRPy_staggered_A2B.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_staggered_A2B.py)\n",
     "\n",
+    "## Introduction:\n",
+    "\n",
     "This notebook presents an alternate algorithm for computing the magnetic field from the vector potential in a staggered prescription. It is a direct port of the old `GiRaFFE` implementation.\n",
     "\n",
-    "We will need to compute $B^i$ everywhere in order to evolve $\\tilde{S}_i$. However, $B^i = \\epsilon^{ijk} \\partial_j A_k$ requires derivatives of $A_i$, so getting $B^i$ in the ghostzones (and not just on the interior) will require some additional work. In the staggered prescription, this is accomplished with a simple copy boundary condition at the $i,h,k=0$ ghost zone. Due to the staggered nature of the grids, the other ghost zone requires no such treatment. "
+    "We will need to compute $B^i$ everywhere in order to evolve $\\tilde{S}_i$. However, $B^i = \\epsilon^{ijk} \\partial_j A_k$ requires derivatives of $A_i$, so getting $B^i$ in the ghostzones (and not just on the interior) will require some additional work. In the staggered prescription, this is accomplished with a simple copy boundary condition at the ghost zones where $i$, $j$, or $k=0$. Due to the staggered nature of the grids, the other ghost zone requires no such treatment. "
    ]
   },
   {
@@ -205,7 +207,7 @@
     "## Step 2.d: Set indices and apply copy boundary conditions \\[Back to [top](#toc)\\]\n",
     "$$\\label{indices}$$\n",
     "\n",
-    "Next, we will define the indices that we care about for a given point $i,j,k$ where we will find the magnetic field. For the derivatives we're taking, these happen to be $i$, $i-1$, $j$, $j-1$, $k$, and $k-1$. Here, we also implement our copy boundary condition. Note that in C, `(i!=0)` will evaluate to `1` only if `i = 0`, and `0` otherwise. So, for any nonzero `i`, $i$ and $i+1$ will be exactly what one would expect. However, for `i=0`, we will store `shiftedim1=0` and `shiftedi=1` just as we do for `i=1` (hence 'copy'), preventing us from trying to access out-of-bounds memory, which would be bad. (Note that our loop bounds will prevent us from running into other such out-of-bounds problems, and that all of this applies exactly the same for $j$ and $k$.)\n",
+    "Next, we will define the indices that we care about for a given point $i,j,k$ where we will find the magnetic field. For the derivatives we're taking, these happen to be $i$, $i-1$, $j$, $j-1$, $k$, and $k-1$. Here, we also implement our copy boundary condition. Note that in C, `(i!=0)` will evaluate to `0` only if `i = 0`, and `1` otherwise. So, for any nonzero `i`, $i$ and $i+1$ will be exactly what one would expect. However, for `i=0`, we will store `shiftedim1=0` and `shiftedi=1` just as we do for `i=1` (hence 'copy'), preventing us from trying to access out-of-bounds memory, which would be bad. (Note that our loop bounds will prevent us from running into other such out-of-bounds problems, and that all of this applies exactly the same for $j$ and $k$.)\n",
     "\n",
     "We will also declare variables to store the indices we will need later; `actual_index` is where we will store the calculated magnetic field. We will set it now, since it will not change. We also invert $\\psi^3 = \\sqrt{\\sqrt{\\gamma}}$."
    ]
@@ -256,12 +258,12 @@
     "We will compute the staggered magnetic field first, starting with $B^x = \\partial_y A_z - \\partial_z A_y$. Now,\n",
     "* `Ax(i,j,k)` is actually $A_x(i,j+1/2,k+1/2)$,\n",
     "* `Ay(i,j,k)` is actually $A_y(i+1/2,j,k+1/2)$, and \n",
-    "* `Az(i,j,k)` is actually $A_y(i+1/2,j+1/2,k)$.\n",
+    "* `Az(i,j,k)` is actually $A_z(i+1/2,j+1/2,k)$.\n",
     "\n",
     "Likewise, \n",
     "* `Bx(i,j,k)` is actually $B^x(i+1/2,j,k)$,\n",
     "* `By(i,j,k)` is actually $B^y(i,j+1/2,k)$, and \n",
-    "* `Bz(i,j,k)` is actually $B^y(i,j,k+1/2)$.\n",
+    "* `Bz(i,j,k)` is actually $B^z(i,j,k+1/2)$.\n",
     "\n",
     "So, $\\partial_z A_y\\ {\\rm at}\\ (i+1/2,j,k)$ is actually `Ay(i,j,k) - Ay(i,j,k-1)]/dZ`, and so forth. "
    ]
@@ -327,7 +329,7 @@
    "source": [
     "%%writefile -a $Ccodesdir/compute_B_and_Bstagger_from_A.h\n",
     "\n",
-    "    // Now multiply Bx and Bx_stagger by 1/sqrt(gamma(i+1/2,j,k)]) = 1/sqrt(1/2 [gamma + gamma_ip1]) = exp(-6 x 1/2 [phi + phi_ip1] )\n",
+    "    // Now multiply Bx_stagger by 1/sqrt(gamma(i+1/2,j,k)]) = 1/sqrt(1/2 [gamma + gamma_ip1]) = exp(-6 x 1/2 [phi + phi_ip1] )\n",
     "    const int imax_minus_i = (Nxx_plus_2NGHOSTS0-1)-i;\n",
     "    const int indexip1jk = IDX3S(i + ( (imax_minus_i > 0) - (0 > imax_minus_i) ),j,k);\n",
     "    Bx_stagger[actual_index] *= Psim3/psi3_bssn[indexip1jk];\n"
@@ -366,7 +368,7 @@
     "    // Set By_stagger = \\partial_z A_x - \\partial_x A_z\n",
     "    By_stagger[actual_index] = (Ax[index]-Ax[indexkm1])*invdx2 - (Az[index]-Az[indexim1])*invdx0;\n",
     "\n",
-    "    // Now multiply By and By_stagger by 1/sqrt(gamma(i,j+1/2,k)]) = 1/sqrt(1/2 [gamma + gamma_jp1]) = exp(-6 x 1/2 [phi + phi_jp1] )\n",
+    "    // Now multiply By_stagger by 1/sqrt(gamma(i,j+1/2,k)]) = 1/sqrt(1/2 [gamma + gamma_jp1]) = exp(-6 x 1/2 [phi + phi_jp1] )\n",
     "    const int jmax_minus_j = (Nxx_plus_2NGHOSTS1-1)-j;\n",
     "    const int indexijp1k = IDX3S(i,j + ( (jmax_minus_j > 0) - (0 > jmax_minus_j) ),k);\n",
     "    By_stagger[actual_index] *= Psim3/psi3_bssn[indexijp1k];\n"
