Tutorial-GiRaFFE_NRPy-Basic_Equations: Attempting again to rename the file because the name still appears wrong on github.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Basic_equations.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Basic_equations.ipynb
@@ -30,9 +30,9 @@
     "\\sqrt{4\\pi} b^0 = B^0_{\\rm (u)} &= \\frac{u_j B^j}{\\alpha} \\\\\n",
     "\\sqrt{4\\pi} b^i = B^i_{\\rm (u)} &= \\frac{B^i + (u_j B^j) u^i}{\\alpha u^0},\\\\\n",
     "\\end{align}\n",
-    "and $u^\\mu$ is the four-velocity. We will not couple this stress-energy tensor to the Einstein Tensor because the plasma we are \n",
+    "and $u^\\mu$ is the four-velocity. We will not couple this stress-energy tensor to the Einstein Tensor because the plasma we consider is extremely diffuse. \n",
     "\n",
-    "**Derivation from F^{\\mu\\nu}, including the constraints of GRFFE**\n",
+    "**Derivation from $F^{\\mu\\nu}$, including the constraints of GRFFE**\n",
     "\n",
     "In place of the magnetic field $B^i$, we choose to evolve the vector potential $A_i$. By doing so, we guarantee that the magnetic field is divergenceless to round-off level. We also evolve the Poynting flux $\\tilde{S}_i$, which in GRFFE, represents the momentum flux in the plasma, and $\\psi^6 \\Phi$, where $\\psi^6=\\sqrt{\\gamma}$ and $\\gamma$ is the determinant of the three metric.\n",
     "\n",
@@ -74,7 +74,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os,sys\n",
+    "nrpy_dir_path = os.path.join(\"..\")\n",
+    "if nrpy_dir_path not in sys.path:\n",
+    "    sys.path.append(nrpy_dir_path)\n",
+    "\n",
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"GiRaFFE_NRPy_Tutorial\",location_of_template_file=os.path.join(\"..\"))"
+   ]
   }
  ],
  "metadata": {
@@ -93,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
