SEOBNR: update minor bug in derivative routine notebook.

--- a/Tutorial-SEOBNR_Derivative_Routine.ipynb
+++ b/Tutorial-SEOBNR_Derivative_Routine.ipynb
@@ -581,7 +581,7 @@
     "        expr_validated = sp.sympify(file2_lines[i].split(\"=\")[1].replace(\"sp.\",\"\"))\n",
     "        difference = sp.simplify(expr_new - expr_validated)\n",
     "        if difference != 0:\n",
-    "            num_diffs + 1\n",
+    "            num_diffs += 1\n",
     "            print(difference)\n",
     "    if num_diffs == 0:\n",
     "        print(\"No difference. TEST PASSED!\")\n",
@@ -612,7 +612,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notebook output to PDF is only supported on Linux systems, with pdflatex installed.\n"
+      "[NbConvertApp] WARNING | pattern 'NRPyPN_shortcuts.ipynb' matched no files\n",
+      "Created NRPyPN_shortcuts.tex, and compiled LaTeX file to PDF file\n",
+      "    NRPyPN_shortcuts.pdf\n"
      ]
     }
    ],
