GiRaFFE_NRPy: Remove outdated uses of \text and \texttt, as well as old mentions of GiRaFFE_HO.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
@@ -533,7 +533,7 @@
     "$$\\label{code_validation}$$\n",
     "\n",
     "\n",
-    "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ evolution equations and auxiliary quantities we intend to use between\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for the `GiRaFFE` evolution equations and auxiliary quantities we intend to use between\n",
     "1. this tutorial and \n",
     "2. the NRPy+ [GiRaFFE_NRPy.Stilde_flux](../../edit/in_progress/GiRaFFE_NRPy/Stilde_flux.py) module.\n",
     "\n",
