--- a/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-1D_tests-unstaggered.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-1D_tests-unstaggered.ipynb
@@ -13,7 +13,7 @@
     "  gtag('config', 'UA-59152712-8');\n",
     "</script>\n",
     "\n",
-    "# Start-to-Finish Example: $\\text{GiRaFFE_HO}$ 1D tests\n",
+    "# Start-to-Finish Example: `GiRaFFE_NRPy` 1D tests\n",
     "\n",
     "### Author: Patrick Nelson\n",
     "\n",
