--- a/in_progress/Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb
@@ -510,7 +510,7 @@
     "$$\\label{code_validation}$$\n",
     "\n",
     "\n",
-    "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ evolution equations and auxiliary quantities we intend to use between\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for the `GiRaFFE` evolution equations and auxiliary quantities we intend to use between\n",
     "1. this tutorial and \n",
     "2. the NRPy+ [GiRaFFE_NRPy.Induction_Equation](../../edit/in_progress/GiRaFFE_NRPy/Induction_Equation.py) module.\n",
     "\n",
