--- a/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-1D_tests-staggered.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-1D_tests-staggered.ipynb
@@ -13,7 +13,7 @@
     "  gtag('config', 'UA-59152712-8');\n",
     "</script>\n",
     "\n",
-    "# Start-to-Finish Example: $\\text{GiRaFFE_HO}$ 1D tests\n",
+    "# Start-to-Finish Example: `GiRaFFE_NRPy` 1D tests\n",
     "\n",
     "### Author: Patrick Nelson\n",
     "\n",
@@ -98,7 +98,6 @@
     "\n",
     "# Step P3: Create executable output directory:\n",
     "outdir = os.path.join(Ccodesdir,\"output/\")\n",
-    "cmd.mkdir(Ccodesdir)\n",
     "cmd.mkdir(outdir)\n",
     "\n",
     "# Step P5: Set timestepping algorithm (we adopt the Method of Lines)\n",
