BaikalETK & WaveToyNRPy: in some Python versions, fileinput cannot be used as a context manager: https://stackoverflow.com/questions/30835090/attributeerror-fileinput-instance-has-no-attribute-exit .

--- a/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
+++ b/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
@@ -443,10 +443,10 @@
     "    #   (since REAL is undefined in the ETK, but CCTK_REAL takes its place)\n",
     "    cmd.mkdir(os.path.join(outdir,\"SIMD\"))\n",
     "    import fileinput\n",
-    "    with fileinput.FileInput(os.path.join(nrpy_dir_path,\"SIMD\",\"SIMD_intrinsics.h\")) as infile:\n",
-    "        with open(os.path.join(outdir,\"SIMD\",\"SIMD_intrinsics.h\"),\"w\") as outfile:\n",
-    "            for line in infile:\n",
-    "                outfile.write(line.replace(\"#define REAL_SIMD_ARRAY REAL\", \"#define REAL_SIMD_ARRAY CCTK_REAL\"))\n",
+    "    f = fileinput.input(os.path.join(nrpy_dir_path,\"SIMD\",\"SIMD_intrinsics.h\"))\n",
+    "    with open(os.path.join(outdir,\"SIMD\",\"SIMD_intrinsics.h\"),\"w\") as outfile:\n",
+    "        for line in f:\n",
+    "            outfile.write(line.replace(\"#define REAL_SIMD_ARRAY REAL\", \"#define REAL_SIMD_ARRAY CCTK_REAL\"))\n",
     "\n",
     "    # Create directory for rfm_files output\n",
     "    cmd.mkdir(os.path.join(outdir,\"rfm_files\"))\n",
