Tutorial-Solving_the_Scalar_Wave_Equation_in_Pure_Python.ipynb: continue work

--- a/Tutorial-Solving_the_Scalar_Wave_Equation_in_Pure_Python.ipynb
+++ b/Tutorial-Solving_the_Scalar_Wave_Equation_in_Pure_Python.ipynb
@@ -44,7 +44,7 @@
     "1. [Step 0](#prereqs): Prerequisites & Additional Reading\n",
     "1. [Step 1](#intro): Introduction: The scalar wave equation\n",
     "1. [Step 1.a](#problem_statement): Mathematical problem statement\n",
-    "1. [Step 1.b](#solution): Solution\n",
+    "1. [Step 1.b](#solution): Chosen solution to the scalar wave equation\n",
     "1. [Step 1](#problem_statement): Introduction: Problem Statement\n",
     "1. [Step 2](#initializenrpy): A NRPy+-based C code for solving the scalar wave equation\n",
     "1. [Step 2](#rhss1d): Scalar Wave RHSs in One Spatial Dimension, Fourth-Order Finite Differencing\n",
@@ -67,11 +67,11 @@
     "$$\\label{prereqs}$$\n",
     "\n",
     "\n",
-    "This tutorial assumes that the user has some basic familiarity with computer programming and computational physics or numerical analysis.\n",
+    "This tutorial assumes basic familiarity with computer programming, undergraduate mathematics, and computational physics or numerical analysis.\n",
     "\n",
     "For additional reading, please consult the following links:\n",
     "\n",
-    "* [Numerical Analysis & Basic Mathematics](http://astro.phys.wvu.edu/zetienne/MATH521-f2018/additional_reading.html)\n",
+    "* [Online Resources for Numerical Analysis & Basic Mathematics](http://astro.phys.wvu.edu/zetienne/MATH521-f2018/additional_reading.html)\n",
     "* [Numerical Recipes in C](http://www.numerical.recipes/) Feel free to use the *free* \"obsolete\" (but not really!) versions. Note that Numerical Recipes was written by numerical relativists!"
    ]
   },
@@ -79,17 +79,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction: The scalar wave equation\n",
+    "<a id='intro'></a>\n",
     "\n",
-    "Here we will write a Python code (based in [NumPy](https://numpy.org/)) to numerically solve the scalar wave equation\n",
+    "# Step 1: Introduction: The scalar wave equation \\[Back to [top](#toc)\\]\n",
+    "$$\\label{intro}$$\n",
+    "\n",
+    "We will write a Python code (based in [NumPy](https://numpy.org/)) to numerically solve the scalar wave equation\n",
     "\n",
     "$$\\partial_t^2 u(t,x,y,z) = c^2 \\nabla^2 u(t,x,y,z),$$\n",
     "\n",
     "given initial conditions $u(t=t_0,x,y,z)$.\n",
     "\n",
-    "## Mathematical problem statement\n",
+    "<a id='problem_statement'></a>\n",
     "\n",
-    "We wish to numerically solve the scalar wave equation as an [initial value problem](https://en.wikipedia.org/wiki/Initial_value_problem) in Cartesian coordinates:\n",
+    "## Mathematical problem statement\n",
+    "$$\\label{problem_statement}$$\n",
+    "\n",
+    "We will numerically solve the scalar wave equation as an [initial value problem](https://en.wikipedia.org/wiki/Initial_value_problem) in Cartesian coordinates:\n",
     "$$\\partial_t^2 u = c^2 \\nabla^2 u,$$\n",
     "where $u$ (the amplitude of the wave) is a function of time and space: $u = u(t,x,y,...)$ (spatial dimension as-yet unspecified) and $c$ is the wave speed, subject to some initial condition\n",
     "\n",
@@ -109,7 +115,7 @@
     "\n",
     "We will use NRPy+ to generate efficient C codes capable of generating both initial data $u(0,x,y,...) = f(x,y,...)$; $v(0,x,y,...)=g(x,y,...)$, as well as finite-difference expressions for the right-hand sides of the above expressions. These expressions are needed within the *Method of Lines* to \"integrate\" the solution forward in time.\n",
     "\n",
-    "### Solution & Initial Conditions\n",
+    "## Solution & Initial Conditions\n",
     "\n",
     "Here we will implement the spherical Gaussian solution to the scalar wave equation, consists of ingoing and outgoing wave fronts:\n",
     "\\begin{align}\n",
@@ -187,6 +193,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here is a visualization of this solution over time $u_{\\rm exact}(t)$ in the $x-z$ plane:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"560\"\n",
+       "            height=\"315\"\n",
+       "            src=\"https://www.youtube.com/embed/TJOo2JIW53g?rel=0&amp;controls=0&amp;showinfo=0\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f69e891c970>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import IFrame\n",
+    "# Youtube\n",
+    "IFrame('https://www.youtube.com/embed/TJOo2JIW53g?rel=0&amp;controls=0&amp;showinfo=0',560,315)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now let's confirm the solution indeed solves the PDE:\n",
     "$$\n",
     "\\partial_t^2 u(t,x,y,z) = c^2 \\nabla^2 u(t,x,y,z),\n",
@@ -200,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -739,17 +785,17 @@
      "text": [
       "# Outputting data at (x,y,z) = (0.04,0.04,0.04)\n",
       "# Integrating forward in time, to time 0.042 . ETA: N/A seconds\n",
-      "# Integrating forward in time, to time 0.083 . ETA: 0m8.00s seconds\n",
-      "# Integrating forward in time, to time 0.125 . ETA: 0m7.34s seconds\n",
-      "# Integrating forward in time, to time 0.167 . ETA: 0m6.61s seconds\n",
-      "# Integrating forward in time, to time 0.208 . ETA: 0m5.87s seconds\n",
-      "# Integrating forward in time, to time 0.250 . ETA: 0m5.14s seconds\n",
-      "# Integrating forward in time, to time 0.292 . ETA: 0m4.42s seconds\n",
-      "# Integrating forward in time, to time 0.333 . ETA: 0m3.68s seconds\n",
-      "# Integrating forward in time, to time 0.375 . ETA: 0m2.94s seconds\n",
-      "# Integrating forward in time, to time 0.417 . ETA: 0m2.21s seconds\n",
-      "# Integrating forward in time, to time 0.458 . ETA: 0m1.48s seconds\n",
-      "# Integrating forward in time, to time 0.500 . ETA: 0m0.74s seconds\n",
+      "# Integrating forward in time, to time 0.083 . ETA: 0m7.53s seconds\n",
+      "# Integrating forward in time, to time 0.125 . ETA: 0m6.94s seconds\n",
+      "# Integrating forward in time, to time 0.167 . ETA: 0m6.31s seconds\n",
+      "# Integrating forward in time, to time 0.208 . ETA: 0m5.61s seconds\n",
+      "# Integrating forward in time, to time 0.250 . ETA: 0m4.91s seconds\n",
+      "# Integrating forward in time, to time 0.292 . ETA: 0m4.21s seconds\n",
+      "# Integrating forward in time, to time 0.333 . ETA: 0m3.51s seconds\n",
+      "# Integrating forward in time, to time 0.375 . ETA: 0m2.81s seconds\n",
+      "# Integrating forward in time, to time 0.417 . ETA: 0m2.10s seconds\n",
+      "# Integrating forward in time, to time 0.458 . ETA: 0m1.40s seconds\n",
+      "# Integrating forward in time, to time 0.500 . ETA: 0m0.70s seconds\n",
       "# Results, output to file output_experiment_resolution_24_cubed.txt\n",
       "0.00 -16.00 2.999421380013 2.999421380013\n",
       "0.04 -10.70 2.998843001874 2.998843001814\n",
@@ -765,8 +811,8 @@
       "0.46 -8.54 2.930108856521 2.930108848127\n",
       "0.50 -8.48 2.917085872939 2.917085863230\n",
       "\n",
-      "CPU times: user 9.74 s, sys: 0 ns, total: 9.74 s\n",
-      "Wall time: 9.73 s\n"
+      "CPU times: user 9.27 s, sys: 0 ns, total: 9.27 s\n",
+      "Wall time: 9.27 s\n"
      ]
     }
    ],
@@ -832,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,16 +983,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f6e541358e0>]"
+       "[<matplotlib.lines.Line2D at 0x7f69793970a0>]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1002,9 +1048,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created Tutorial-ScalarWave.tex, and compiled LaTeX file to PDF file\n",
+      "    Tutorial-ScalarWave.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-ScalarWave\")"
