Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C: Provided physically reasonable values to get agreement between GiRaFFE and GiRaFFE_NRPy versions of the code.

--- a/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
+++ b/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
@@ -66,7 +66,7 @@
     "                    1. <font color='green'><b> Patrick Seal of Approval </b></font>[**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb)\n",
     "            1. <font color='green'><b>Patrick Seal of Approval</b></font>[Recalculate $\\bar{v}^i$ and apply fixes to $\\tilde{S}_i$ and $\\bar{v}^i$:](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
     "                1. Apply fixes to $\\tilde{S}_i$, then recompute $\\bar{v}^i$ at the next time step. Then, apply fixes to $\\bar{v}^i$ to preserve current sheets, and recompute $\\tilde{S}_i$ to match.\n",
-    "                1. <font color='orange'><b> C++ isn't running right on Windows. </b></font>[**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
+    "                1. <font color='green'><b>Patrick Seal of Approval</b></font>[**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
     "            1. <font color='green'><b>Patrick Seal of Approval</b></font>[Apply boundary conditions:](Tutorial-GiRaFFE_NRPy-BCs.ipynb)\n",
     "                1. Apply linear (To be upgraded?) outer boundary conditions to the vector potential and Valencia three-velocity. \n",
     "                1. <font color='green'><b> Patrick Seal of Approval </b></font>[**Unit test**](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs.ipynb)\n",
