Tutorial-Solving_the_Scalar_Wave_Equation_with_NumPy: Fixed the ToC!

--- a/Tutorial-Solving_the_Scalar_Wave_Equation_with_NumPy.ipynb
+++ b/Tutorial-Solving_the_Scalar_Wave_Equation_with_NumPy.ipynb
@@ -13,7 +13,7 @@
     "  gtag('config', 'UA-59152712-8');\n",
     "</script>\n",
     "\n",
-    "# NRPy+ Tutorial: Solving the Scalar Wave Equation in `NumPy`\n",
+    "# NRPy+ Tutorial: Solving the Scalar Wave Equation with `NumPy`\n",
     "\n",
     "## Authors: Zach Etienne, Patrick Nelson, Terrence Pierre Jacques, Thiago Assumpção, Leo Werneck, Brandon Clark\n",
     "\n",
@@ -43,18 +43,22 @@
     "\n",
     "1. [Step 0](#prereqs): Prerequisites & Additional Reading\n",
     "1. [Step 1](#intro): Introduction: The scalar wave equation\n",
-    "1. [Step 1.a](#problem_statement): Mathematical problem statement\n",
-    "1. [Step 1.b](#solution): Chosen solution to the scalar wave equation\n",
-    "1. [Step 1.c](#initial_condition): Initial condition\n",
-    "1. [Step 2](#initializenrpy): A NRPy+-based C code for solving the scalar wave equation\n",
-    "1. [Step 3](#mol): The Method of Lines (MoL)\n",
-    "1. [Step 3](#rhss3d): Scalar Wave RHSs in Three Spatial Dimensions, Tenth-Order Finite Differencing\n",
-    "    1. [Step 3.a](#code_validation1): Code Validation against `ScalarWave.ScalarWave_RHSs` NRPy+ module\n",
-    "1. [Step 4](#id): Setting up Initial Data for the Scalar Wave Equation\n",
-    "    1. [Step 4.a](#planewave): The Monochromatic Plane-Wave Solution\n",
-    "    1. [Step 4.b](#sphericalgaussian): The Spherical Gaussian Solution (*Courtesy Thiago Assumpção*)\n",
-    "1. [Step 5](#code_validation2): Code Validation against `ScalarWave.InitialData` NRPy+ module\n",
-    "1. [Step 6](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
+    "    1. [Step 1.a](#problem_statement): Mathematical problem statement\n",
+    "    1. [Step 1.b](#solution): Chosen solution to the scalar wave equation\n",
+    "    1. [Step 1.c](#initial_condition): Initial condition\n",
+    "1. [Step 2](#mol): The Method of Lines (MoL)\n",
+    "1. [Step 3](#basicalg): `NumPy` Implementation: Basic Algorithm\n",
+    "    1. [Step 3.a](#numgrid_freeparams): Set up the numerical grid and free parameters\n",
+    "    1. [Step 3.b](#numpy_id): Set up the initial data\n",
+    "    1. [Step 3.c](#numpy_gfs): Allocate memory for the gridfunctions storing $u$ and $v$, and define the indexing macro function\n",
+    "    1. [Step 3.d](#numpy_rhss): Define the right-hand sides of the PDEs\n",
+    "    1. [Step 3.e](#numpy_bcs): Boundary Conditions\n",
+    "    1. [Step 3.f](#numpy_mol): The Method of Lines\n",
+    "    1. [Step 3.g](#numpy_driver): The main driver function\n",
+    "1. [Step 4](#too_slow): Argh, the code is SLOW! Why use NRPy+ instead?\n",
+    "1. [Step 5](#error_analysis): Error analysis & code validation: Confirming numerical errors converge to zero at the expected rate\n",
+    "1. [Step 6](#student_exercises): Exercises for students\n",
+    "1. [Step 7](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
   {
@@ -200,7 +204,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f8e712c3f40>"
+       "<IPython.lib.display.IFrame at 0x7f89200ffe20>"
       ]
      },
      "execution_count": 2,
@@ -825,17 +829,17 @@
      "text": [
       "# Outputting data at (x,y,z) = (0.04,0.04,0.04)\n",
       "# Integrating forward in time, to time 0.042 . ETA: N/A seconds\n",
-      "# Integrating forward in time, to time 0.083 . ETA: 0m7.66s seconds\n",
-      "# Integrating forward in time, to time 0.125 . ETA: 0m6.93s seconds\n",
-      "# Integrating forward in time, to time 0.167 . ETA: 0m6.21s seconds\n",
-      "# Integrating forward in time, to time 0.208 . ETA: 0m5.50s seconds\n",
-      "# Integrating forward in time, to time 0.250 . ETA: 0m4.81s seconds\n",
-      "# Integrating forward in time, to time 0.292 . ETA: 0m4.13s seconds\n",
-      "# Integrating forward in time, to time 0.333 . ETA: 0m3.43s seconds\n",
-      "# Integrating forward in time, to time 0.375 . ETA: 0m2.74s seconds\n",
-      "# Integrating forward in time, to time 0.417 . ETA: 0m2.06s seconds\n",
-      "# Integrating forward in time, to time 0.458 . ETA: 0m1.37s seconds\n",
-      "# Integrating forward in time, to time 0.500 . ETA: 0m0.69s seconds\n",
+      "# Integrating forward in time, to time 0.083 . ETA: 0m7.91s seconds\n",
+      "# Integrating forward in time, to time 0.125 . ETA: 0m7.16s seconds\n",
+      "# Integrating forward in time, to time 0.167 . ETA: 0m6.44s seconds\n",
+      "# Integrating forward in time, to time 0.208 . ETA: 0m5.75s seconds\n",
+      "# Integrating forward in time, to time 0.250 . ETA: 0m5.02s seconds\n",
+      "# Integrating forward in time, to time 0.292 . ETA: 0m4.30s seconds\n",
+      "# Integrating forward in time, to time 0.333 . ETA: 0m3.58s seconds\n",
+      "# Integrating forward in time, to time 0.375 . ETA: 0m2.86s seconds\n",
+      "# Integrating forward in time, to time 0.417 . ETA: 0m2.15s seconds\n",
+      "# Integrating forward in time, to time 0.458 . ETA: 0m1.43s seconds\n",
+      "# Integrating forward in time, to time 0.500 . ETA: 0m0.71s seconds\n",
       "# Results, output to file output_experiment_resolution_24_cubed.txt\n",
       "0.00 -16.00 2.999421380013 2.999421380013\n",
       "0.04 -10.70 2.998843001874 2.998843001814\n",
@@ -851,8 +855,8 @@
       "0.46 -8.54 2.930108856521 2.930108848127\n",
       "0.50 -8.48 2.917085872939 2.917085863230\n",
       "\n",
-      "CPU times: user 9.1 s, sys: 17.5 ms, total: 9.12 s\n",
-      "Wall time: 9.11 s\n"
+      "CPU times: user 9.43 s, sys: 1.21 ms, total: 9.44 s\n",
+      "Wall time: 9.44 s\n"
      ]
     }
    ],
@@ -939,8 +943,8 @@
    "source": [
     "<a id='error_analysis'></a>\n",
     "\n",
-    "# Step 5: Error analysis: Confirming numerical errors converge to zero at the expected rate \\[Back to [top](#toc)\\]\n",
-    "<a id='error_analysis'></a>\n",
+    "# Step 5: Error analysis & code validation: Confirming numerical errors converge to zero at the expected rate \\[Back to [top](#toc)\\]\n",
+    "$$\\label{error_analysis}$$\n",
     "\n",
     "So that we don't have to wait, the results at $48^3$ and $96^3$ were precomputed and are next stored to files:"
    ]
@@ -1058,7 +1062,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8e0150ef10>]"
+       "[<matplotlib.lines.Line2D at 0x7f88aeb2dee0>]"
       ]
      },
      "execution_count": 17,
@@ -1111,9 +1115,9 @@
     "<a id='student_exercises'></a>\n",
     "\n",
     "# Step 6: Exercises for students \\[Back to [top](#toc)\\]\n",
-    "<a id='student_exercises'></a>\n",
+    "$$\\label{student_exercises}$$\n",
     "\n",
-    "1. Adjust the above code to make it run twice as fast on the same numerical grid, while generating exactly the same results (stored to files above). Can you make it run any faster than twice as fast?\n",
+    "1. Adjust the above code to make it run twice as fast on the same numerical grid, while generating exactly the same results (stored to files above). *Bonus*: Can you make it run any faster than twice as fast (while still being written in \"pure\" Python, using `NumPy`)?\n",
     "1. How much should the (absolute value of the) relative error `|rel_error|` drop if we were to double the resolution to $36^3$? How will this adjust the `log10(|rel_error|)`?\n",
     "1. Why did we add a nonzero constant offset to the exact solution? (*Hint: Start from the definition of relative error.*)\n",
     "1. What will happen to the convergence order if we continue the simulation for a much longer time, say to $t=2$?"
@@ -1129,7 +1133,7 @@
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
-    "[Tutorial-Solving_the_Scalar_Wave_Equation_in_NumPy.pdf](Tutorial-Solving_the_Scalar_Wave_Equation_in_NumPy.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
+    "[Tutorial-Solving_the_Scalar_Wave_Equation_with_NumPy.pdf](Tutorial-Solving_the_Scalar_Wave_Equation_with_NumPy.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
@@ -1141,15 +1145,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-Solving_the_Scalar_Wave_Equation_in_NumPy.tex, and\n",
+      "Created Tutorial-Solving_the_Scalar_Wave_Equation_with_NumPy.tex, and\n",
       "    compiled LaTeX file to PDF file Tutorial-\n",
-      "    Solving_the_Scalar_Wave_Equation_in_NumPy.pdf\n"
+      "    Solving_the_Scalar_Wave_Equation_with_NumPy.pdf\n"
      ]
     }
    ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Solving_the_Scalar_Wave_Equation_in_NumPy\")"
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Solving_the_Scalar_Wave_Equation_with_NumPy\")"
    ]
   }
  ],
