Tutorial-Solving_the_Scalar_Wave_Equation_with_NumPy.ipynb: Correct name of ETK thorn

--- a/Tutorial-Solving_the_Scalar_Wave_Equation_with_NumPy.ipynb
+++ b/Tutorial-Solving_the_Scalar_Wave_Equation_with_NumPy.ipynb
@@ -204,7 +204,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f745857c940>"
+       "<IPython.lib.display.IFrame at 0x7f11445daf70>"
       ]
      },
      "execution_count": 2,
@@ -851,17 +851,17 @@
      "text": [
       "# Outputting data at (x,y,z) = (0.04,0.04,0.04)\n",
       "# Integrating forward in time, to time 0.042 . ETA: N/A seconds\n",
-      "# Integrating forward in time, to time 0.083 . ETA: 0m10.67s seconds\n",
-      "# Integrating forward in time, to time 0.125 . ETA: 0m9.23s seconds\n",
-      "# Integrating forward in time, to time 0.167 . ETA: 0m7.82s seconds\n",
-      "# Integrating forward in time, to time 0.208 . ETA: 0m6.69s seconds\n",
-      "# Integrating forward in time, to time 0.250 . ETA: 0m5.72s seconds\n",
-      "# Integrating forward in time, to time 0.292 . ETA: 0m4.82s seconds\n",
-      "# Integrating forward in time, to time 0.333 . ETA: 0m3.97s seconds\n",
-      "# Integrating forward in time, to time 0.375 . ETA: 0m3.15s seconds\n",
-      "# Integrating forward in time, to time 0.417 . ETA: 0m2.35s seconds\n",
-      "# Integrating forward in time, to time 0.458 . ETA: 0m1.56s seconds\n",
-      "# Integrating forward in time, to time 0.500 . ETA: 0m0.77s seconds\n",
+      "# Integrating forward in time, to time 0.083 . ETA: 0m7.87s seconds\n",
+      "# Integrating forward in time, to time 0.125 . ETA: 0m7.20s seconds\n",
+      "# Integrating forward in time, to time 0.167 . ETA: 0m6.50s seconds\n",
+      "# Integrating forward in time, to time 0.208 . ETA: 0m5.80s seconds\n",
+      "# Integrating forward in time, to time 0.250 . ETA: 0m5.09s seconds\n",
+      "# Integrating forward in time, to time 0.292 . ETA: 0m4.36s seconds\n",
+      "# Integrating forward in time, to time 0.333 . ETA: 0m3.63s seconds\n",
+      "# Integrating forward in time, to time 0.375 . ETA: 0m2.91s seconds\n",
+      "# Integrating forward in time, to time 0.417 . ETA: 0m2.18s seconds\n",
+      "# Integrating forward in time, to time 0.458 . ETA: 0m1.45s seconds\n",
+      "# Integrating forward in time, to time 0.500 . ETA: 0m0.73s seconds\n",
       "# Results, output to file output_experiment_resolution_24_cubed.txt\n",
       "0.00 -16.00 2.999421380013 2.999421380013\n",
       "0.04 -10.70 2.998843001874 2.998843001814\n",
@@ -877,8 +877,8 @@
       "0.46 -8.54 2.930108856521 2.930108848127\n",
       "0.50 -8.48 2.917085872939 2.917085863230\n",
       "\n",
-      "CPU times: user 10.4 s, sys: 11.4 ms, total: 10.4 s\n",
-      "Wall time: 10.4 s\n"
+      "CPU times: user 9.63 s, sys: 1.5 ms, total: 9.63 s\n",
+      "Wall time: 9.63 s\n"
      ]
     }
    ],
@@ -970,7 +970,7 @@
     "    1. [**tutorial on scalar wave equation in curvilinear coordinates**](Tutorial-ScalarWaveCurvilinear.ipynb)\n",
     "    1. Einstein Toolkit thorns\n",
     "        1. [**tutorial on `WaveToyNRPy`, for solving the scalar wave equation**](Tutorial-ETK_thorn-WaveToyNRPy.ipynb)\n",
-    "        1. [**tutorial on `IDScalarWave`, for setting up scalar wave initial data**](Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb)\n",
+    "        1. [**tutorial on `IDScalarWaveNRPy`, for setting up scalar wave initial data**](Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb)\n",
     "1. NRPy+ implements a covariant BSSN formulation that supports Cartesian, spherical-like, and cylindrical-like coordinates, and its boundary condition driver automatically sets up correct boundary conditions for any tensor in any orthogonal coordinate system! \n",
     "    1. [**BSSN overview tutorial; contains links to several other tutorials**](Tutorial-BSSN_formulation.ipynb)\n",
     "    1. Einstein Toolkit thorns\n",
@@ -1116,7 +1116,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f73e7c8b6a0>]"
+       "[<matplotlib.lines.Line2D at 0x7f10d24e7790>]"
       ]
      },
      "execution_count": 17,
