--- a/Tutorial-Solving_the_Scalar_Wave_Equation_with_NumPy.ipynb
+++ b/Tutorial-Solving_the_Scalar_Wave_Equation_with_NumPy.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "This notebook was written to explicitly outline the basic algorithms for numerically solving [hyperbolic PDEs](https://en.wikipedia.org/wiki/Hyperbolic_partial_differential_equation), **including Einstein's equations of general relativity in e.g., the BSSN formalism**.\n",
     "\n",
-    "While the codes here are written by hand, the objective of the notebook is to act as a reference to NRPy+ can be used to generate much of the code *automatically*, greatly reducing the possibility of human error. \n",
+    "While the codes here are written by hand, the objective of the notebook is motivate the use of NRPy+, which can be used to generate much of this code either *automatically* or from validated templates, greatly reducing the possibility of human error. \n",
     "\n",
     "**Notebook Status:** <font color='green'><b>Validated</b></font>\n",
     "\n",
